flowc/tests/fixtures/check_e161_match_non_sum.flow
flow classify(n: int) -> int {
  match n {
    other -> 0
  }
}
